test/spec_vectors/call/fail/module_17.wat
(module (func $unbound-func (call 1)))